[gd_scene load_steps=6 format=3 uid="uid://bt0082d8frwwg"]

[ext_resource type="Texture2D" uid="uid://dt18wcj4qx15i" path="res://Assets/Sprites/bullet.png" id="1_xjght"]
[ext_resource type="Script" uid="uid://bq57shwjtffh6" path="res://Scripts/bullet.gd" id="1_ycag2"]
[ext_resource type="Texture2D" uid="uid://bswnpcen0yjs" path="res://Assets/Sprites/bullet_ally.png" id="2_oduel"]
[ext_resource type="AudioStream" uid="uid://c33xx1wrh80n1" path="res://Assets/Sounds/bullet_bounce.wav" id="4_6afsh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oduel"]
radius = 5.0
height = 12.0

[node name="Bullet" type="Area2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_ycag2")

[node name="Enemy_bullet" type="Sprite2D" parent="."]
texture = ExtResource("1_xjght")

[node name="Ally_bullet" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_oduel")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_oduel")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6afsh")
volume_db = -20.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
